--- a/grand_site/templates/index.html
+++ b/grand_site/templates/index.html
@@ -141,11 +141,12 @@
 
 		<!-- Scripts -->
 			{% block footer_javascript %}
-			<script src="{{ STATIC_URL }}js/jquery.min.js"></script>
-			<script src="{{ STATIC_URL }}js/skel.min.js"></script>
-			<script src="{{ STATIC_URL }}js/util.js"></script>
-			<script src="{{ STATIC_URL }}js/main.js"></script>
+			<script src="{% static 'js/jquery.min.js' %}"></script>
+			<script src="{% static 'js/skel.min.js' %}"></script>
+			<script src="{% static 'js/util.js' %}"></script>
+			<script src="{% static 'js/main.js' %}"></script>
 			{% endblock footer_javascript %}
+			{% block footer_javascript_page %}{% endblock footer_javascript_page %}
 
 	</body>
 </html>
