--- a/grand_site/templates/subscribers/subscriber_new.html
+++ b/grand_site/templates/subscribers/subscriber_new.html
@@ -2,124 +2,121 @@
 {% load static %}
 {% block title %} Signup {% endblock title %}
 
+
 {% block header_top %}
 	<form id="user-reg-form" action="." method="post">
-                {% csrf_token %}
-                <!-- {# Username & Password Section #} -->
-                <h3>Signup</h3>
-                <h5>CREATE A USERNAME AND PASSWORD</h5>
-                <table class="table">
-                    <tbody>
-                        <tr>
-                            <th>{{ form.username.label }}</th>
-                            <th>{{ form.email.label }}</th>
-                        </tr>
-                        <tr>
-                            <td>{{ form.username }}</td>
-                            <td>{{ form.email }}</td>
-                        </tr>
-                        <tr>
-                            <td>{{ form.username.errors }}</td>
-                            <td>{{ form.email.errors }}</td>
-                        </tr>
-                        <tr>
-                            <th>Password</th>
-                            <th>Confirm Password</th>
-                        </tr>
-                        <tr>
-                            <td>{{ form.password1 }}</td>
-                            <td>{{ form.password2 }}</td>
-                        </tr>
-                        <tr>
-                            <td>{{ form.password1.errors }}</td>
-                            <td>{{ form.password2.errors }}</td>
-                        </tr>
-                    </tbody>
-                </table>
-                {# Billing Address Section #}
-                <h5 class="sn-sh">YOUR BILLING ADDRESS</h5>
-                <table class="table">
-                    <tbody>
-                        <tr>
-                            <th>{{ form.first_name.label }}</th>
-                            <th>{{ form.last_name.label }}</th>
-                        </tr>
-                        <tr>
-                            <td>{{ form.first_name }}</td>
-                            <td>{{ form.last_name }}</td>
-                        </tr>
-                        <tr>
-                            <td>{{ form.first_name.errors }}</td>
-                            <td>{{ form.last_name.errors }}</td>
-                        </tr>
-                        <tr>
-                            <th>{{ form.address_one.label }}</th>
-                            <th>{{ form.address_two.label }}</th>
-                        </tr>
-                        <tr>
-                            <td>{{ form.address_one }}</td>
-                            <td>{{ form.address_two }}</td>
-                        </tr>
-                        <tr>
-                            <td>{{ form.address_one.errors }}</td>
-                            <td>{{ form.address_two.errrors }}</td>
-                        </tr>
-                        <tr>
-                            <th>{{ form.city.label }}</th>
-                            <th>{{ form.state.label }}</th>
-                        </tr>
-                        <tr>
-                            <td>{{ form.city }}</td>
-                            <td>{{ form.state }}</td>
-                        </tr>
-                        <tr>
-                            <td>{{ form.city.errors }}</td>
-                            <td>{{ form.state.errors }}</td>
-                        </tr>
-                    </tbody>
-                </table>
-                <input class="btn btn-primary" type="submit" value="submit">
-            </form>
-            {# Credit Card Section #}
-            <h5 class="sn-sh">CREDIT CARD</h5>
-            <form id="payment-form" action="." method="post">
-                <table class="table">
-                    <tbody>
-                        <tr>
-                            <th>Card Number</th>
-                            <th>CVC</th>
-                            <th>Exp Month</th>
-                            <th>Exp Year</th>
-                        </tr>
-                        <tr>
-                            <td><input type="text" size="32" data-stripe="number"
-                                       class="col-md-10 form-control"/></td>
-                            <td><input type="text" size="4" data-stripe="cvc"
-                                       class="col-md-2 form-control"/></td>
-                            <td><input type="text" size="2" data-stripe="exp-month"
-                                       class="col-md-1 form-control"/></td>
-                            <td><input type="text" size="4" data-stripe="exp-year"
-                                       class="col-md-1 form-control"/></td>
-                        </tr>
-                    </tbody>
-                </table>
-                <span class="payment-errors label label-danger"></span>
-                <div class="">
-                    {% for err in form.non_field_errors %}
-                        <p class="label label-danger">{{ err }}</p>
-                    {% endfor %}
-                </div>
-                <input id="payment-submit" type="submit" value="Signup"
-                       class="btn btn-primary"/>
-            </form>
+        {% csrf_token %}
+
+        <!-- {# Username & Password Section #} -->
+        <h3>Signup</h3>
+        <h5>CREATE A USERNAME AND PASSWORD</h5>
+        <table class="table">
+            <tbody>
+                <tr>
+                    <th>{{ form.username.label }}</th>
+                    <th>{{ form.email.label }}</th>
+                </tr>
+                <tr>
+                    <td>{{ form.username }}</td>
+                    <td>{{ form.email }}</td>
+                </tr>
+                <tr>
+                    <td>{{ form.username.errors }}</td>
+                    <td>{{ form.email.errors }}</td>
+                </tr>
+                <tr>
+                    <th>Password</th>
+                    <th>Confirm Password</th>
+                </tr>
+                <tr>
+                    <td>{{ form.password1 }}</td>
+                    <td>{{ form.password2 }}</td>
+                </tr>
+                <tr>
+                    <td>{{ form.password1.errors }}</td>
+                    <td>{{ form.password2.errors }}</td>
+                </tr>
+            </tbody>
+        </table>
+        {# Billing Address Section #}
+        <h5 class="sn-sh">YOUR BILLING ADDRESS</h5>
+        <table class="table">
+            <tbody>
+                <tr>
+                    <th>{{ form.first_name.label }}</th>
+                    <th>{{ form.last_name.label }}</th>
+                </tr>
+                <tr>
+                    <td>{{ form.first_name }}</td>
+                    <td>{{ form.last_name }}</td>
+                </tr>
+                <tr>
+                    <td>{{ form.first_name.errors }}</td>
+                    <td>{{ form.last_name.errors }}</td>
+                </tr>
+                <tr>
+                    <th>{{ form.address_one.label }}</th>
+                    <th>{{ form.address_two.label }}</th>
+                </tr>
+                <tr>
+                    <td>{{ form.address_one }}</td>
+                    <td>{{ form.address_two }}</td>
+                </tr>
+                <tr>
+                    <td>{{ form.address_one.errors }}</td>
+                    <td>{{ form.address_two.errrors }}</td>
+                </tr>
+                <tr>
+                    <th>{{ form.city.label }}</th>
+                    <th>{{ form.state.label }}</th>
+                </tr>
+                <tr>
+                    <td>{{ form.city }}</td>
+                    <td>{{ form.state }}</td>
+                </tr>
+                <tr>
+                    <td>{{ form.city.errors }}</td>
+                    <td>{{ form.state.errors }}</td>
+                </tr>
+            </tbody>
+        </table>
+
+    {# Credit Card Section #}
+    <h5 class="sn-sh">CREDIT CARD</h5>
+    <form id="payment-form" action="." method="post">
+        <table class="table">
+            <tbody>
+                <tr>
+                    <th>Card Number</th>
+                    <th>CVC</th>
+                    <th>Exp Month</th>
+                    <th>Exp Year</th>
+                </tr>
+                <tr>
+                    <td><input type="text" size="32" data-stripe="number"
+                               class="col-md-10 form-control"/></td>
+                    <td><input type="text" size="4" data-stripe="cvc"
+                               class="col-md-2 form-control"/></td>
+                    <td><input type="text" size="2" data-stripe="exp-month"
+                               class="col-md-1 form-control"/></td>
+                    <td><input type="text" size="4" data-stripe="exp-year"
+                               class="col-md-1 form-control"/></td>
+                </tr>
+            </tbody>
+        </table>
+        <span class="payment-errors label label-danger"></span>
+        <div class="">
+            {% for err in form.non_field_errors %}
+                <p class="label label-danger">{{ err }}</p>
+            {% endfor %}
+        </div>
+        <input id="payment-submit" type="submit" value="Signup"
+               class="btn btn-primary"/>
+    </form>
 
 {% endblock header_top %}
 
-{% block footer_javascript %}
-    <script src="{{ STATIC_URL }}js/jquery.min.js"></script>
-    <script src="{{ STATIC_URL }}js/skel.min.js"></script>
-    <script src="{{ STATIC_URL }}js/util.js"></script>
-    <script src="{{ STATIC_URL }}js/main.js"></script>
+{% block footer_javascript_page %}
     <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
     <script type="text/javascript">
         // This identifies your website in the createToken call below
@@ -144,7 +141,8 @@
                 $regform.get(0).submit();
             }
         };
-
+    </script>
+    <script type="text/javascript">
         jQuery(function($) {
             $('#payment-form').submit(function(event) {
             var $form = $(this);
@@ -159,5 +157,5 @@
             });
         });
     </script>
-{% endblock footer_javascript %}
+{% endblock footer_javascript_page %}
 
