--- a/grand_site/templates/index.html
+++ b/grand_site/templates/index.html
@@ -23,11 +23,11 @@
 					<p>A free responsive site template by <a href="https://templated.co">TEMPLATED</a></p>
 
 					{% if user.is_authenticated %}
-                        <li><a href="">Logout</a></li>
+                        <li><a href="/logout/">Logout</a></li>
                         <li><a href=""
                                class="p-r-none">Accounts</a></li>
                     {% else %}
-                        <li><a href="">Login</a></li>
+                        <li><a href="/login/">Login</a></li>
                         <li><a href="/signup/">Sign Up</a></li>
                     {% endif %}
 
