--- a/grand_site/templates/login.html
+++ b/grand_site/templates/login.html
@@ -10,12 +10,12 @@
                 <table class="table">
                     <tr>
                         <td><label for="id_username">Username</label></td>
-                        <td><input id="id_username" name="username" 
+                        <td><input id="id_username" placeholder="Username" autofocus ="" name="username" 
                                    type="text" class="form-control"></td>
                     </tr>
                     <tr>
                         <td><label for="id_password">Password</label></td>
-                        <td><input id="id_password" name="password" 
+                        <td><input id="id_password" placeholder="Password" name="password" 
                                    type="password" class="form-control"></td>
                     </tr>
                 </table>
