--- a/grand_site/templates/base.html
+++ b/grand_site/templates/base.html
@@ -1,6 +1,5 @@
 <!DOCTYPE HTML>
-{% load staticfiles %}
-<!--
+{% load static %}<!--
 	Epilogue by TEMPLATED
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
@@ -10,7 +9,7 @@
 		<title>{% block title %} Epilogue by TEMPLATED {% endblock title %}</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="{{ STATIC_URL }}css/main.css" media="screen">
+		<link rel="stylesheet" href="{{ STATIC_URL }}css/main.css" />
 	</head>
 	<body>
 
@@ -24,12 +23,12 @@
 					<p>A free responsive site template by <a href="https://templated.co">TEMPLATED</a></p>
 
 					{% if user.is_authenticated %}
-                        <li><a href="">Logout</a></li>
-                        <li><a href=""
+                        <li><a href="/logout/">Logout</a></li>
+                        <li><a href="{% url 'account_list' %}"
                                class="p-r-none">Accounts</a></li>
                     {% else %}
-                        <li><a href="">Login</a></li>
-                        <li><a href="" class="p-r-none">Sign Up</a></li>
+                        <li><a href="/login/">Login</a></li>
+                        <li><a href="/signup/">Sign Up</a></li>
                     {% endif %}
 
 					{% endblock head %}
@@ -53,10 +52,10 @@
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae<br />
 						malesuada turpis. Nam pellentesque in ac aliquam. Aliquam tempor<br />
 						mi porta egestas maximus lorem ipsum dolor.</p>
-						{% endblock %}
 						<ul class="actions">
 							<li><a href="#" class="button big">Learn More</a></li>
 						</ul>
+						{% endblock %}
 					</section>
 
 				<!-- Items -->
@@ -75,7 +74,7 @@
 						</article>
 						<article class="item">
 							<header>
-								<a href="#"><img src="{{ STATIC_URL }}images/pic02.jpg" alt="" /></a>
+								<a href="#"><img src="{% static 'images/pic02.jpg' %}" alt="My image" /></a>
 								<h3>Blandit adipiscing</h3>
 							</header>
 							{% block right_top %}
@@ -142,11 +141,12 @@
 
 		<!-- Scripts -->
 			{% block footer_javascript %}
-			<script src="{{ STATIC_URL }}js/jquery.min.js"></script>
-			<script src="{{ STATIC_URL }}js/skel.min.js"></script>
-			<script src="{{ STATIC_URL }}js/util.js"></script>
-			<script src="{{ STATIC_URL }}js/main.js"></script>
+			<script src="{% static 'js/jquery.min.js' %}"></script>
+			<script src="{% static 'js/skel.min.js' %}"></script>
+			<script src="{% static 'js/util.js' %}"></script>
+			<script src="{% static 'js/main.js' %}"></script>
 			{% endblock footer_javascript %}
+			{% block footer_javascript_page %}{% endblock footer_javascript_page %}
 
 	</body>
 </html>
