--- a/grand_site/templates/accounts/account_list.html
+++ b/grand_site/templates/accounts/account_list.html
@@ -8,7 +8,16 @@
                 <h3 class="ad-mh">Account List
                     {# Add Account Link #}
                 </h3>
+
                 {# Account Search Form #}
+				<form action="{% url 'account_list' %}" method="get">
+				    <input id="al-search" type="text"
+				           name="account" value="{{ request.GET.account }}"
+				           class="form-control" />
+				    <input type="submit"
+				           value="Search" class="btn btn-success" />
+				</form>
+				
             </div>
             {# List of Accounts #}
             <ul id="al-group" class="strip-list">
@@ -19,7 +28,7 @@
                     </li>
                 {% endfor %}
             </ul>
-            
+
             {# Pagination Section #}
 			{% if is_paginated %}
 			    <div id="al-paginate">
