--- a/grand_site/templates/accounts/account_list.html
+++ b/grand_site/templates/accounts/account_list.html
@@ -5,8 +5,13 @@
     <div id="content-container" class="container p-none">
         <div id="al-container" class="side-p">
             <div id="al-control">
+            
                 <h3 class="ad-mh">Account List
                     {# Add Account Link #}
+					<span class="pull-right">
+					    <a href="{% url 'account_new' %}"
+					       class="btn btn-link p-r-none">+ Add New Account</a>
+					</span>
                 </h3>
 
                 {# Account Search Form #}
