created new account added!

--- a/grand_site/templates/accounts/account_detail.html
+++ b/grand_site/templates/accounts/account_detail.html
@@ -1,14 +1,15 @@
 {% extends 'base.html' %}
+{% block title %}Account Details{% endblock title %}
 
 {% block header_top %}
-    <div id="content-container" class="container p-none">
+    <!-- <div id="content-container" class="container p-none"> -->
         <!-- <div id="ad-container"> -->
-            <div id="gi-container" class="ad-container">
+            <!-- <div id="gi-container" class="ad-container"> -->
                 {% include 'accounts/account_item_view.html' %}
-            </div>
+            <!-- </div> -->
         <!-- </div> -->
         {# List Contacts #}
         {# List Communications #}
-    </div>
+    <!-- </div> -->
 
 {% endblock header_top %}
