enabled AJAX on edit account form

--- a/grand_site/templates/accounts/account_detail.html
+++ b/grand_site/templates/accounts/account_detail.html
@@ -2,14 +2,14 @@
 {% block title %}Account Details{% endblock title %}
 
 {% block header_top %}
-    <!-- <div id="content-container" class="container p-none"> -->
-        <!-- <div id="ad-container"> -->
-            <!-- <div id="gi-container" class="ad-container"> -->
+    <div id="content-container" class="container p-none">
+        <div id="ad-container">
+            <div id="gi-container" class="ad-container">
                 {% include 'accounts/account_item_view.html' %}
-            <!-- </div> -->
-        <!-- </div> -->
+            </div>
+        </div>
         {# List Contacts #}
         {# List Communications #}
-    <!-- </div> -->
+    </div>
 
 {% endblock header_top %}
