--- a/grand_site/templates/accounts/account_cru.html
+++ b/grand_site/templates/accounts/account_cru.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
-{% block title %}Account Operation{% endblock title %}
+
+{% if account.uuid %}
+	{% block title %}Account Operation!!!!!!!!!!!!!{% endblock title %}
+{% endif %}
 
 {% block header_top %}
     <div id="content-container" class="container p-none">
