--- a/grand_site/templates/subscribers/subscriber_new.html
+++ b/grand_site/templates/subscribers/subscriber_new.html
@@ -80,6 +80,9 @@
                 </tr>
             </tbody>
         </table>
+        <input id="payment-submit" type="submit" value="Signup" class="btn btn-primary"/>
+    </form>
+
 
     {# Credit Card Section #}
     <h5 class="sn-sh">CREDIT CARD</h5>
@@ -110,7 +113,7 @@
                 <p class="label label-danger">{{ err }}</p>
             {% endfor %}
         </div>
-        <input id="payment-submit" type="submit" value="Signup"
+        <input id="payment-submit" type="submit" value="Signup and donate $10!"
                class="btn btn-primary"/>
     </form>
 
