added home href to a header

--- a/grand_site/templates/base.html
+++ b/grand_site/templates/base.html
@@ -20,7 +20,7 @@
 						
 				<div class="inner">
 					{% block head %}
-					<h1>Epilogue</h1>
+					<a href="/"><h1>Epilogue</h1></a>
 					<p>A free responsive site template by <a href="https://templated.co">TEMPLATED</a></p>
 
 					{% if user.is_authenticated %}
