fixed payment method discription

--- a/grand_site/templates/subscribers/subscriber_new.html
+++ b/grand_site/templates/subscribers/subscriber_new.html
@@ -85,7 +85,7 @@
 
 
     {# Credit Card Section #}
-    <h5 class="sn-sh">CREDIT CARD(not realized yet)</h5>
+    <h5 class="sn-sh">CREDIT CARD</h5>
     <form id="payment-form" action="." method="post">
         <table class="table">
             <tbody>
