add autofocus at create account page.

--- a/grand_site/templates/accounts/account_cru.html
+++ b/grand_site/templates/accounts/account_cru.html
@@ -1,8 +1,6 @@
 {% extends 'base.html' %}
 
-{% if account.uuid %}
-	{% block title %}Account Operation!!!!!!!!!!!!!{% endblock title %}
-{% endif %}
+{% block title %}Account Operation{% endblock title %}
 
 {% block header_top %}
     <div id="content-container" class="container p-none">
