new contact added.

--- a/grand_site/templates/contacts/contact_detail.html
+++ b/grand_site/templates/contacts/contact_detail.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}Contact Detail{% endblock title %}
 
-{% block head_top %}
+{% block header_top %}
     <div id="content-container" class="container p-none">
         <div id="cd-body" class="row">
             <h4 class="ad-mh">Contact Details</h4>
@@ -13,4 +13,4 @@
         </div>
     </div>
 
-{% endblock head_top %}
+{% endblock header_top %}
