--- a/grand_site/templates/accounts/account_detail.html
+++ b/grand_site/templates/accounts/account_detail.html
@@ -16,7 +16,13 @@
 		    <div id="cd-body" class="row">
 		        <table id="cd-table" class="table table-hover">
 		            <tbody>
-		                <tr></tr>
+		                <tr>
+						    <td><h4 b><i>Name</i></h4></td>
+						    <td><h4 b><i>Role</i></h4></td>
+						    <td><h4 b><i>Email</i></h4></td>
+						    <td><h4 b><i>Phone</i></h4></td>
+						    <td></td><td></td>
+						</tr>
 		                {% for contact in contacts %}
 		                    {% include 'contacts/contact_item_view.html' %}
 		                {% endfor %}
