--- a/grand_site/templates/contacts/contact_item_view.html
+++ b/grand_site/templates/contacts/contact_item_view.html
@@ -6,7 +6,7 @@
     <td class="con-cntrl">
         {# Contact Edit Link #}
         <a class="pen edit-contact"
-           href="{{ contact.get_update_url }}?account={{ account.id }}"></a>
+           href="{{ contact.get_update_url }}?account={{ account.id }}"><i>Edit</i></a>
     </td>
     <td class="ci-td-p-r">
         {# Contact Delete Link #}
