enabled delete contact

--- a/grand_site/templates/home.html
+++ b/grand_site/templates/home.html
@@ -2,12 +2,12 @@
 {% load static %}
 {% block title %} Home {% endblock title %}
 
-{% block head_top %}
+{% block header_top %}
 <h2>Magna porta maximus</h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae<br />
 malesuada turpis. Nam pellentesque in ac aliquam. Aliquam tempor<br />
 mi porta egestas maximus lorem ipsum dolor.</p>
-{% endblock head_top %}
+{% endblock header_top %}
 
 
 {% block left_top %}
