--- a/grand_site/templates/accounts/account_list.html
+++ b/grand_site/templates/accounts/account_list.html
@@ -6,13 +6,13 @@
         <div id="al-container" class="side-p">
             <div id="al-control">
 
-                <h3 class="ad-mh">Account List
+                <h3 class="ad-mh">Account List</h3>
                     {# Add Account Link #}
-					<span class="pull-right">
+					<h4 span class="pull-right">
 					    <a href="{% url 'account_new' %}"
 					       class="btn btn-link p-r-none">+ Add New Account</a>
-					</span>
-                </h3>
+					</span></h4>
+
 
                 {# Account Search Form #}
 				<form action="{% url 'account_list' %}" method="get">
