--- a/grand_site/templates/communications/comm_item_view.html
+++ b/grand_site/templates/communications/comm_item_view.html
@@ -1,5 +1,5 @@
 <li class="co-item">
-    <h5 class="co-item-h">{{ comm.subject }}
+    <h5>{{ comm.subject }}
         <span>
             {# Comm Delete URL #}
             <a class="cancel comm-control" 
@@ -9,6 +9,7 @@
                href=""></a>
         </span>
     </h5>
-    <p class="co-item-date">on {{ comm.date }}</p>
+    <p><sub>on {{ comm.date }}</sub>
     <p>{{ comm.notes }}</p>
+    <hr>
 </li>
