--- a/grand_site/templates/accounts/account_detail.html
+++ b/grand_site/templates/accounts/account_detail.html
@@ -12,7 +12,13 @@
         {# List Contacts #}
 		<div id="cd-container" class="ad-container">
 		    <div class="ad-headers">
-		        <h4 class="ad-mh m-none">Contacts</h4>
+		        <h4 class="ad-mh m-none">Contacts
+			        {# New Contact Link #}
+					<a id="new-contact"
+					   class="btn btn-link"
+					   href="{% url 'contact_new' %}?account={{ account.id }}">
+					   + Add New Contact</a>
+				</h4>
 		    </div>
 		    <div id="cd-body" class="row">
 		        <table id="cd-table" class="table table-hover">
@@ -29,11 +35,7 @@
 		                {% endfor %}
 		            </tbody>
 		        </table>
-		        {# New Contact Link #}
-				<a id="new-contact"
-				   class="btn btn-link"
-				   href="{% url 'contact_new' %}?account={{ account.id }}">
-				   New Contact</a>
+		        
 		    </div>
 		</div>
 		<hr>
@@ -41,22 +43,34 @@
 		<div id="co-container" class="ad-container">
 		    <div class="ad-headers">
 		        <h4 class="ad-mh m-none">Communications
-		        <!-- ?account={{ account.id }} --><a href="{% url 'comm_new' %}" 
-					       class="btn btn-link p-r-none">+ Add New Communication</a>
-					</span></h4>
+		        <a href="{% url 'comm_new' %}?account={{ account.id }}">+Add communications</a>
+		        </h4>
 		    </div>
 		    <hr>
 		    <div id="co-body" class="ad-container">
-		        {# Communications Item Form #}
+		        {# List of Communications #}
+		        <div id="cd-body" class="row">
+			        <table id="cd-table" class="table table-hover">
+				        <tbody>
+					        <tr>
+							    <td><h4 b><i>Subject</i></h4></td>
+							    <td><h4 b><i>Date</i></h4></td>
+							    <td><h4 b><i>Notes</i></h4></td>
+							    <td></td><td></td><td></td>
+							</tr>
+				            {% for comm in communications %}
+				                {% include 'communications/comm_item_view.html' %}
+				            {% endfor %}
+			            </tbody>
+			        </table>
+			    </div>
+			    <div class="ad-headers">
+			        <h4 class="ad-mh m-none">Add new communications</h4>
+			    </div>
+		   		{# Communications Item Form #}
 				<div id="co-form-wrapper">
 				    {% include 'communications/comm_item_form.html' %}
 				</div>
-		        {# List of Communications #}
-		        <ul id="co-list" class="strip-list col-md-12 p-none">
-		            {% for comm in communications %}
-		                {% include 'communications/comm_item_view.html' %}
-		            {% endfor %}
-		        </ul>
 		    </div>
 		</div>
     <!-- </div> -->
