--- a/grand_site/templates/base.html
+++ b/grand_site/templates/base.html
@@ -1,5 +1,10 @@
 <!DOCTYPE HTML>
 {% load static %}
+
+{% block head_css_site %}
+    {% load compressed %}
+    {% compressed_css 'site_css' %}
+{% endblock head_css_site %}
 <!--
 	Epilogue by TEMPLATED
 	templated.co @templatedco
@@ -148,6 +153,10 @@
 			<script src="{% static 'js/main.js' %}"></script>
 			{% endblock footer_javascript %}
 			{% block footer_javascript_page %}{% endblock footer_javascript_page %}
+			
+			{% block footer_javascript_site %}
+			    {% compressed_js 'site_js' %}
+			{% endblock footer_javascript_site %}
 
 	</body>
 </html>
