add social login for username and pass

--- a/grand_site/templates/base.html
+++ b/grand_site/templates/base.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 {% load static %}
-
+<!-- 
 {% block head_css_site %}
     {% load pipeline %}
     {% stylesheet 'site_css' %}
-{% endblock head_css_site %}
+{% endblock head_css_site %} -->
 <!--
 	Epilogue by TEMPLATED
 	templated.co @templatedco
@@ -169,9 +169,9 @@
 			{% endblock footer_javascript %}
 			{% block footer_javascript_page %}{% endblock footer_javascript_page %}
 			
-			{% block footer_javascript_site %}
+<!-- 			{% block footer_javascript_site %}
 			    {% javascript 'site_js' %}
-			{% endblock footer_javascript_site %}
+			{% endblock footer_javascript_site %} -->
 
 	</body>
 </html>
