--- a/grand_site/templates/login.html
+++ b/grand_site/templates/login.html
@@ -31,4 +31,13 @@
             </form>
         </div>
     </div>
+
+    <br>
+    <p><strong>-- OR --</strong></p>
+    <br><a href="{% url 'social:begin' 'github' %}">Login with GitHub</a>
+    <br><a href="{% url 'social:begin' 'twitter' %}">Login with Twitter</a>
+    <br><a href="{% url 'social:begin' 'facebook' %}">Login with Facebook</a>
+    <br><a href="{% url 'social:begin' 'google-oauth2' %}">Login with Google</a>
+
+
 {% endblock header_top %}
