add social login for username and pass

--- a/grand_site/templates/base.html
+++ b/grand_site/templates/base.html
@@ -167,11 +167,12 @@
 			<script src="{% static 'js/util.js' %}"></script>
 			<script src="{% static 'js/main.js' %}"></script>
 			{% endblock footer_javascript %}
-			{% block footer_javascript_page %}{% endblock footer_javascript_page %}
 			
-<!-- 			{% block footer_javascript_site %}
+<!-- 			{% block footer_javascript_page %}{% endblock footer_javascript_page %}
+			
+			{% block footer_javascript_site %}
 			    {% javascript 'site_js' %}
-			{% endblock footer_javascript_site %} -->
-
+			{% endblock footer_javascript_site %}
+ -->
 	</body>
 </html>
