--- a/grand_site/templates/base.html
+++ b/grand_site/templates/base.html
@@ -43,21 +43,6 @@
             </div>
         </div>
 		<!-- Wrapper -->
-			<div id="wrapper">
-
-				<!-- Banner -->
-					<section id="intro" class="main">
-						<span class="icon fa-diamond major"></span>
-						{% block header_top %}
-						<h2>Magna porta maximus</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae<br />
-						malesuada turpis. Nam pellentesque in ac aliquam. Aliquam tempor<br />
-						mi porta egestas maximus lorem ipsum dolor.</p>
-						<ul class="actions">
-							<li><a href="#" class="button big">Learn More</a></li>
-						</ul>
-						{% endblock %}
-					</section>
 
 				<!-- Items -->
 					<section class="main items">
@@ -122,6 +107,70 @@
 						<ul class="actions">
 							<li><a href="#" class="button big">Get Started</a></li>
 						</ul>
+					</section>
+
+Comment--------------
+<script type="text/javascript">
+	var disqus_config = function () { 
+		this.language = "ru";
+	};
+</script>
+
+		<!-- {% load disqus_tags %}
+		{% disqus_dev %}
+
+		<script type="text/javascript">
+		  var disqus_developer = 1;
+		  var disqus_url = 'http://buyandplay.com/';
+		</script>
+
+		{% load disqus_tags %}
+		{% disqus_show_comments %}
+
+		<div id="disqus_thread"></div>
+		<script type="text/javascript" src="http://disqus.com/forums/buyandplay/embed.js"></script>
+		<noscript><p><a href="http://buyandplay.disqus.com/?url=ref">View the discussion thread.</a></p></noscript>
+		<p><a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a></p>
+
+ -->
+Comment1-----------------
+ <div id="disqus_thread"></div>
+<script>
+
+/**
+*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+/*
+var disqus_config = function () {
+this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+*/
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://buyandplay.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
+Comment 2--------------------
+<script id="dsq-count-scr" src="//buyandplay.disqus.com/count.js" async></script>
+			<div id="wrapper">
+
+				<!-- Banner -->
+					<section id="intro" class="main">
+						<span class="icon fa-diamond major"></span>
+						{% block header_top %}
+						<h2>Magna porta maximus</h2>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae<br />
+						malesuada turpis. Nam pellentesque in ac aliquam. Aliquam tempor<br />
+						mi porta egestas maximus lorem ipsum dolor.</p>
+						<ul class="actions">
+							<li><a href="#" class="button big">Learn More</a></li>
+						</ul>
+						{% endblock %}
 					</section>
 
 <!-- 
